some work on common cause and bernardo smith refs

--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -42,3 +42,23 @@
    ISBN={978-0-387-71598-8 - 978-0-387-71599-5},
    series={Springer texts in statistics},
 }
+
+@book{1994:hoyland,
+   author={H{\o}yland, Arnljot and Rausand, Marvin},
+   title={System reliability theory: models and statistical methods},
+   address={New York, NY},
+   publisher={Wiley},
+   year={1994},
+   ISBN={0-471-59397-4},
+   series={A Wiley interscience publication},
+}
+
+@book{2005:walker
+   author={Walker, J. Samuel},
+   title={Three Mile Island: a nuclear crisis in historical perspective},
+   address={Berkeley},
+   publisher={Univ. of California Press},
+   year={2005},
+   ISBN={0-520-24683-7},
+}
+
