small corrections and additions to common cause motivation

--- a/intro.tex
+++ b/intro.tex
@@ -705,7 +705,7 @@ relies on the Dirichlet-Multinomial model.
 
 In reliabilty analysis of systems with redundant components,
 \emph{common-cause failure} refers to simultaneous failure of several redunant components due to a common or shared root cause,
-like extreme environmental condistions (fire, flood, earthquake) \cite[p.325]{1994:hoyland}.
+like extreme environmental conditions (e.g., fire, flood, or earthquake) \cite[p.325]{1994:hoyland}.
 It has been recognized as the dominant factor to the unreliability of redundant systems,
 and its modeling has become an important part of reliability analysis
 following the Reactor Safety Study \cite{1975:reactor:safety:study},
@@ -733,11 +733,19 @@ the decay heat may be enough to damage the core of a reactor significantly
 \cite[p.~VIII-9 and VIII-25f]{1975:reactor:safety:study}.}
 
 Due to their critical role for the functioning of emergency cooling systems,
-there are several diesel generators installed,
-each of which supplying enough energy to power the cooling systems on its own.
+there are usually several diesel generators installed in a nuclear power plant,
+each of which can supply enough energy to power the cooling systems on its own.
 The number of diesel generators installed is typically in the range of four***??***,
 i.e., there are four redundant components, of which one is needed for service.
 %with a redundancy in the order of four or 
+The Fukushima Daiichi nuclear disaster is a recent example of an accident
+involving common cause failure of diesel generators.
+In this case, all XX*** diesel generators at reactors 1 to 3 
+ceased to function due to a tsunami wave flooding the rooms where they were situated.
+The tsunami wave had been caused by the Tohoku*** earthquake,
+which had promted the reactors to shutdown automatically, and in doing so,
+switching to the diesel generators for power supply.
+
 
 Failure of a component
 
