basic parameter model and some small corrections in cc motivation

--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -62,3 +62,22 @@
    ISBN={0-520-24683-7},
 }
 
+@techreport{1988:mosleh::common:cause,
+  author = {Mosleh, A. and Fleming, K. N. and Parry, G. W. and Paula, H. M. and Worledge, D. H. and Rasmuson, D. M.},
+  title = {Procedures for treating common cause failures in safety and reliability studies: Procedural framework and examples},
+  institution = {PLG Inc.},
+  year = {1988},
+  number = {NUREG/CR-4780},
+  address = {Newport Beach, CA (USA)},
+  month = jan,
+}
+
+@techreport{2011:iaea::report,
+  author = {Weightman, Michael and Jamet, Philippe and Lyons, James E. and Samaddar, Sujit},
+  title = {{IAEA} International Fact Finding Expert Mission of the {Fukushima Dai-Ichi} {NPP} Accident Following the Great East {Japan} Earthquake and Tsunami},
+  institution = {International Atomic Energy Agency},
+  year = {2011},
+  address = {Vienna, Austria},
+  month = June,
+  note = {\url{http://www-pub.iaea.org/MTCD/Meetings/PDFplus/2011/cn200/documentation/cn200_Final-Fukushima-Mission_Report.pdf}},
+}
