--- a/defs.tex
+++ b/defs.tex
@@ -19,6 +19,8 @@
 \newcommand{\btheta}{\bs{\theta}}
 \newcommand{\bpsi}{\bs{\psi}}
 
+\renewcommand{\vec}[1]{\mbf{#1}}
+
 \newcommand{\uz}{^{(0)}} % upper zero
 \newcommand{\un}{^{(n)}} % upper n
 
