some minor corrections

--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -53,7 +53,7 @@
    series={A Wiley interscience publication},
 }
 
-@book{2005:walker
+@book{2005:walker,
    author={Walker, J. Samuel},
    title={Three Mile Island: a nuclear crisis in historical perspective},
    address={Berkeley},
