--- a/intro.tex
+++ b/intro.tex
@@ -718,9 +718,11 @@ For a nuclear power plant, a common-cause failure analysis can relate to, e.g.,
 the diesel generators that, if in an emergency the off-site power supply is cut off,
 provide the electricity to power the emergency core cooling systems.
 Emergency core cooling systems are needed to transfer away residual heat emitted from the core after shutdown,
-in case the normal heat removal process
-(generation of steam driving the turbines to produce electricity,
-which is then condensed to water and fed back into the steam generators)
+in case the normal heat removal process%
+\footnote{Heat from the core is transferred to steam generators,
+producing steam that drives the turbines to produce electricity.
+Usually, the depressurized steam exiting the turbines
+is then condensed to water and fed back into the steam generators.}
 is not available.
 When residual heat is not removed, it can overheat the core,
 which could lead to a (partial) core meltdown,
@@ -743,17 +745,18 @@ The number of diesel generators installed is typically in the range of two to fo
 %with a redundancy in the order of four or 
 The Fukushima Daiichi nuclear disaster is a recent example of an accident
 involving common cause failure of diesel generators.
-In this case, all XX*** diesel generators at reactors 1 to 3 
-ceased to function due to a tsunami wave flooding the rooms where they were situated.
+In this case, all 12 available diesel generators at reactors 1 to 6 
+ceased to function due to a tsunami wave flooding the rooms where they were situated \cite[p.~31]{2011:iaea::report}.
 The tsunami wave had been caused by the Tohoku*** earthquake,
 which had promted the reactors to shutdown automatically, and in doing so,
-switching to the diesel generators for power supply.
+switching to the diesel generators for power supply.%
+\footnote{All six off-site power lines were cut off, also due to the earthquake \cite[p.~31]{2011:iaea::report}.}
 
 The arguably most widely used model for common-cause failure is the Basic Parameter Model.
 The alpha-factor parametrisation of this model uses a multinomial distribution
 as its aleatory model for observed failures \cite{1988:mosleh::common:cause}. 
 As seen in Section~\ref{sec:diri-multi}, the conjugate prior to the multinomial model is the Dirichlet distribution.
-In the standard Bayesian approach, the analyst specifies the parameters $\nz, \byz$ of a precise Dirichlet distribution
+In the standard Bayesian approach, the analyst specifies the parameters $(\nz, \byz)$ of a precise Dirichlet distribution
 to model epistemic uncertainty in the alpha-factors, which are the parameters of the multinomial sample model.
 %This Dirichlet prior is then updated with observed data to obtain a precise posterior distribution, also Dirichlet.
 
