minor stuff for alpha factor model

--- a/bib/eigene.bib
+++ b/bib/eigene.bib
@@ -102,7 +102,7 @@
   note = {\url{http://epub.ub.uni-muenchen.de/14068/}},
 }
 
-@article{Walter2013a,
+@article{Troffaes2013a,
     Author = {Matthias C. M. Troffaes and Gero Walter and Dana L. Kelly},
     Title = {A Robust {B}ayesian Approach to Modelling Epistemic Uncertainty in Common-Cause Failure Models},
     Journal = {Reliability Engineering \& System Safety},
