--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -34,12 +34,11 @@
 
 @book{2007:robert,
    author={Robert, Christian P.},
-   title={The {Bayesian} choice : from decision-theoretic foundations to computational implementation},
+   title={The {Bayesian} choice: from decision-theoretic foundations to computational implementation},
    address={New York, NY},
    publisher={Springer},
    year={2007},
-   edition={2. ed.},
-   ISBN={978-0-387-71598-8 - 978-0-387-71599-5},
+   edition={2nd},
    series={Springer texts in statistics},
 }
 
@@ -80,4 +79,15 @@
   address = {Vienna, Austria},
   month = June,
   note = {\url{http://www-pub.iaea.org/MTCD/Meetings/PDFplus/2011/cn200/documentation/cn200_Final-Fukushima-Mission_Report.pdf}},
+}
+
+@article{2012:ritsema,
+    Author = {Ritsema, Jeroen and Lay, Thorne and Kanamori, Hiroo},
+    Doi = {10.2113/gselements.8.3.183},
+    Journal = {Elements},
+    Pages = {183--188},
+    Title = {The 2011 {Tohoku} earthquake},
+    Volume = {8},
+    Number ={3},
+    Year = {2012},
 }
