--- a/head.tex
+++ b/head.tex
@@ -11,6 +11,7 @@
 \usepackage{url}
 \usepackage{natbib}
 \usepackage[nottoc,numbib]{tocbibind}
+\usepackage{paralist}
 
 \usepackage{amsmath}
 \usepackage{amsfonts}
