--- a/intro.tex
+++ b/intro.tex
@@ -27,7 +27,7 @@ Sec.~\ref{sec:norm-norm}: parts of \cite{itip-statinf}
 
 Sec.~\ref{sec:diri-multi}: \cite{Walter2012b}
 
-Sec.~\ref{sec:commoncause}: parts of \cite{Walter2013a}
+Sec.~\ref{sec:commoncause}: parts of \cite{Troffaes2013a}
 
 
 \section{Statistical Inference}
@@ -747,7 +747,7 @@ The Fukushima Daiichi nuclear disaster is a recent example of an accident
 involving common cause failure of diesel generators.
 In this case, all 12 available diesel generators at reactors 1 to 6 
 ceased to function due to a tsunami wave flooding the rooms where they were situated \cite[p.~31]{2011:iaea::report}.
-The tsunami wave had been caused by the Tohoku*** earthquake,
+The tsunami wave had been caused by the T\={o}hoku earthquake \cite{2012:ritsema},
 which had promted the reactors to shutdown automatically, and in doing so,
 switching to the diesel generators for power supply.%
 \footnote{All six off-site power lines were cut off, also due to the earthquake \cite[p.~31]{2011:iaea::report}.}
@@ -760,7 +760,7 @@ In the standard Bayesian approach, the analyst specifies the parameters $(\nz, \
 to model epistemic uncertainty in the alpha-factors, which are the parameters of the multinomial sample model.
 %This Dirichlet prior is then updated with observed data to obtain a precise posterior distribution, also Dirichlet.
 
-We will first describe the Basic Parameter Model in its basic form,
+We will first describe the Basic Parameter Model in its standard form,
 and subsequently present its reparametrization in terms of so-called alpha-factors.
 
 
@@ -768,8 +768,10 @@ and subsequently present its reparametrization in terms of so-called alpha-facto
 
 Consider a system that consists of $k$ components.
 Throughout, we make the following standard assumptions:
-(i) repair is immediate, and
-(ii) failures follow a Poisson process.
+\begin{inparaenum}[(i)]
+\item repair is immediate, and
+\item failures follow a Poisson process.
+\end{inparaenum}
 
 For simplicity, we assume that all $k$ components are exchangeable,
 in the sense that they have identical failure rates.
@@ -852,13 +854,13 @@ plus the rate at which A and B, or A and C fail ($2q_2$),
 plus the rate at which all three components fail ($q_3$).
 
 Next, the alpha-factor model introduces
-$\theta_j$---the so-called alpha-factor---which
+$\alpha_j$---the so-called alpha-factor---which
 denotes the probability of \emph{exactly} $j$ of the $k$ components
 failing given that failure occurs;
 in terms of relative frequency,
-$\theta_j$ is the fraction of failures
+$\alpha_j$ is the fraction of failures
 that involve \emph{exactly} $j$ failed components.
-We write $\vec{\theta}$ for $(\theta_1,\dots,\theta_k)$.
+We write $\vec{\alpha}$ for $(\alpha_1,\dots,\alpha_k)$.
 Clearly,
 \begin{equation}\label{eq:alphaj:in:terms:of:qj}
   \alpha_j=\frac{\binom{k}{j}q_j}{\sum_{\ell=1}^k\binom{k}{\ell}q_\ell}.
@@ -873,18 +875,17 @@ and the rate at which all components fail is $q_3$.
 Translating these rates into fractions,
 we arrive precisely at Eq.~\eqref{eq:alphaj:in:terms:of:qj}.
 
-It can be shown that \cite[Table~C-1, p.~C-5]{1988:mosleh::common:cause}:\footnote{Hint: consider $\sum_{j=1}^k j\alpha_j$.}
+It can be shown that \cite[p.~C-10f]{1988:mosleh::common:cause} %:\footnote{Hint: consider $\sum_{j=1}^k j\alpha_j$.}
 \begin{equation}\label{eq:qj:in:terms:of:qt}
-  q_j=\frac{1}{\binom{k-1}{j-1}}\frac{j\theta_j}{\sum_{\ell=1}^k \ell\theta_\ell}\,q_t.
+  q_j=\frac{1}{\binom{k-1}{j-1}}\frac{j\alpha_j}{\sum_{\ell=1}^k \ell\alpha_\ell}\,q_t\,.
 \end{equation}
 Eqs.~\eqref{eq:qt:in:terms:of:qj}, \eqref{eq:alphaj:in:terms:of:qj},
 and~\eqref{eq:qj:in:terms:of:qt}
-establish a one-to-one link between the so-called
-basic parameter model ($\vec{q}$)
-and the alpha-factor model ($q_t$, $\vec{\theta}$).
+establish a one-to-one link between the basic parameter model (with parameters $\vec{q}$)
+and the alpha-factor model (with parameters $q_t$, $\vec{\alpha}$).
 The benefit of the alpha-factor model over the basic parameter model
 lies in its distinction between the total failure rate of a component $q_t$,
-for which we generally have a lot of information,
-and common-cause failures modelled by $\vec{\theta}$,
-for which we generally have very little information.
+for which there is generally have a lot of information,
+and common-cause failures modelled by $\vec{\alpha}$,
+for which there is generally have very little information.
 
