more minor stuff

--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -91,3 +91,27 @@
     Number ={3},
     Year = {2012},
 }
+
+@techreport{2004:iaea::emergencypower,
+  author = {Chopra, O. and Duong, M. and Faya, A. and Saito, T.},
+  title = {Design of Emergency Power Systems for Nuclear Power Plants: Safety Guide},
+  institution = {International Atomic Energy Agency},
+  year = {2004},
+  number = {NS-G-1.8},
+  series = {{IAEA} Safety Standard Series},
+  address = {Vienna, Austria},
+}
+
+@article{Werner1995165,
+title = "Results and insights from level-1 probabilistic safety assessments for nuclear power plants in France, Germany, Japan, Sweden, Switzerland and the United States",
+journal = "Reliability Engineering & System Safety",
+volume = "48",
+number = "3",
+pages = "165 - 179",
+year = "1995",
+note = "",
+issn = "0951-8320",
+doi = "10.1016/0951-8320(95)00016-U",
+url = "http://www.sciencedirect.com/science/article/pii/095183209500016U",
+author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore and J.A. Murphy and U. Schmocker"
+}
