--- a/intro.tex
+++ b/intro.tex
@@ -739,8 +739,9 @@ the decay heat may be enough to damage the core of a reactor significantly
 Due to their critical role for the functioning of emergency cooling systems,
 there are usually several diesel generators installed in a nuclear power plant,
 each of which can supply enough energy to power the cooling systems on its own.
-The number of diesel generators installed is typically in the range of two to four per reactor***??***
-\cite[p.~31]{2011:iaea::report} ***.
+The number of diesel generators installed is typically in the range of two to four per reactor
+**EPRI NP-2433 ??***.
+If the nuclear power plant has several reactors, diesel generators may be shared between reactors \cite[p.~7]{2004:iaea::emergencypower}.
 %i.e., there are four redundant components, of which one is needed for service.
 %with a redundancy in the order of four or 
 The Fukushima Daiichi nuclear disaster is a recent example of an accident
