dirichlet prior for alpha factors

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -62,3 +62,11 @@
     Publisher = {SIPTA},
     Title = {Imprecise probability models for inference in exponential families},
     Year = {2005}}
+
+@book{1991:walley,
+  author = {Peter Walley},
+  title = {Statistical Reasoning with Imprecise Probabilities},
+  publisher = {Chapman and Hall},
+  address = {London},
+  year = {1991},
+}
