--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -14,3 +14,7 @@
 \item isipta11 paper \cite{Walter2011a}
 \item boatshape?
 \end{itemize}
+
+
+for later in IDM/IBBM discussion:\\
+we use Walley's \cite[\S 7.7.3, p.~395]{1991:walley} $(s,\vec{t})$ notation for the hyperparameters.
